# Simple-Math-Python-Package

./: LICENCE.txt  README.md  first-package-token.txt  setup.cfg
src/astromypkg.egg-info/: PKG-INFO  SOURCES.txt
src/basicpkg.egg-info/: PKG-INFO  SOURCES.txt
src/divide/: divide_by_ten.py
src/multiply/: multiply_by_ten.py
tests/: test_divide_by_ten.py
