[metadata]
name = basicpkg
version = 1.0.0
author = Yağmur Üstel
author_email = ryagmurustel@gmail.com
description = A simple Python package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = -
project_urls =
    Bug Tracker = -
    repository = -
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src